maratona-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maratona-deployment
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector: ## para modificar os pods que já estiverem no ar
    matchLabels:
      app: pods-deployment
  template:
    metadata:
      labels: 
        app: pods-deployment
    spec:
      containers:
      - name: container-nginx
        image: nginx:1.17-alpine
        imagePullPolicy: Always
        resources:
          requests:
            memory: 54Mi
            cpu: 100m
          limits: 
            memory: 54Mi
            cpu: 100m
        ports:
        - containerPort: 80
