maratona-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maratona-service
spec:
  type: LoadBalancer
  selector:
    app: maratona-deployment
  ports:
  -  port: 8080
