maratona-kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: maratona-ingress
spec:
  rules:
  - host: maratona-redirect.com
    http:
      paths:
      - path: /
        backend:
          serviceName: maratona-service
          servicePort: 4200
